[package]
name = "uusiin_ulottuvuuksiin"
version = "0.1.0"
edition = "2024"
authors = ["Konsta Hölttä <sooda@iki.fi>"]

[dependencies]
nannou = "0.19"
nannou_audio = { git = "https://github.com/sooda/nannou", branch = "use-cpal-0.14" }
glicol = { version = "0.13", features = ["use-samples"] }
audrey = "0.3"
